force-app/main/default/objects/Training_Answer_History__c/Training_Answer_History__c.object-meta.xml
<CustomObject>
    <label>Training Answer History</label>
    <nameField>
        <displayFormat>TAH-{YYYY}{MM}-{0000}</displayFormat>
        <label>Training Answer History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Answer Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>