force-app/main/default/objects/Training_Answer_History__c/fields/Choice_A__c.field-meta.xml
<CustomField>
    <fullName>Choice_A__c</fullName>
    <label>Choice A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>