force-app/main/default/objects/Training_Answer_History__c/fields/Choice_C__c.field-meta.xml
<CustomField>
    <fullName>Choice_C__c</fullName>
    <label>Choice C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>