force-app/main/default/objects/Training_Answer_History__c/fields/Choice_D__c.field-meta.xml
<CustomField>
    <fullName>Choice_D__c</fullName>
    <label>Choice D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>