force-app/main/default/objects/Training_Answer_History__c/fields/Examination__c.field-meta.xml
<CustomField>
    <fullName>Examination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examination</label>
    <referenceTo>Examination__c</referenceTo>
    <relationshipLabel>Training Answer Histories</relationshipLabel>
    <relationshipName>Training_Answer_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>