force-app/main/default/objects/Training_Answer_History__c/fields/Examinations_Number__c.field-meta.xml
<CustomField>
    <fullName>Examinations_Number__c</fullName>
    <label>Examinations Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>