force-app/main/default/objects/Training_Answer_History__c/fields/Question_Score__c.field-meta.xml
<CustomField>
    <fullName>Question_Score__c</fullName>
    <label>Question Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>