force-app/main/default/objects/Training_Answer_History__c/fields/Questionnaire_Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Question Bank</label>
    <referenceTo>Questionnaire_Question_Bank__c</referenceTo>
    <relationshipLabel>Training Answer Histories</relationshipLabel>
    <relationshipName>Training_Answer_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>