force-app/main/default/objects/Training_Answer_History__c/fields/Subjective_Questions_Answer__c.field-meta.xml
<CustomField>
    <fullName>Subjective_Questions_Answer__c</fullName>
    <label>Subjective Questions Answer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>