force-app/main/default/objects/Training_Answer_History__c/fields/Training_Task_User__c.field-meta.xml
<CustomField>
    <fullName>Training_Task_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Task User</label>
    <referenceTo>Training_Task_User__c</referenceTo>
    <relationshipLabel>Training Answer Histories</relationshipLabel>
    <relationshipName>Training_Answer_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>